[gd_scene load_steps=31 format=2]

[ext_resource path="res://Font/fontt.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://Audio/vgm-atmos-outer.mp3" type="AudioStream" id=3]
[ext_resource path="res://Scripts/VolumeSlider.gd" type="Script" id=4]
[ext_resource path="res://Images/Knob 16x16.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.160784, 0.466667, 0.0627451, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.101961, 0.282353, 0.0431373, 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.141176, 0.580392, 0.0627451, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.294118, 0.282353, 0.282353, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.172549, 0.172549, 0.172549, 1 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.360784, 0.360784, 0.360784, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.529412, 0.113725, 0.113725, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.376471, 0.0745098, 0.0745098, 1 )

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.792157, 0.215686, 0.215686, 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.294118, 0.282353, 0.282353, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.172549, 0.172549, 0.172549, 1 )

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.360784, 0.360784, 0.360784, 1 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.392157, 0.0862745, 0.0862745, 1 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.596078, 0.0666667, 0.0666667, 1 )

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="StyleBoxEmpty" id=24]

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.815686, 0.235294, 0.235294, 1 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="VBoxContainer" parent="."]
margin_left = 80.0
margin_top = 50.0
margin_right = 560.0
margin_bottom = 310.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Main"]
margin_right = 480.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 1 )
text = "videogame"
align = 1

[node name="Play" type="Button" parent="Main"]
margin_top = 61.0
margin_right = 480.0
margin_bottom = 118.0
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Play"

[node name="Settings" type="Button" parent="Main"]
margin_top = 122.0
margin_right = 480.0
margin_bottom = 179.0
focus_mode = 0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Settings"

[node name="Quit" type="Button" parent="Main"]
margin_top = 183.0
margin_right = 480.0
margin_bottom = 240.0
focus_mode = 0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Quit"

[node name="Settings" type="VBoxContainer" parent="."]
visible = false
margin_left = 86.0
margin_top = 82.0
margin_right = 242.0
margin_bottom = 175.0
rect_scale = Vector2( 3, 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="Button" parent="Settings"]
margin_right = 156.0
margin_bottom = 13.0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 20 )
custom_fonts/font = ExtResource( 1 )
text = "Fullscreen: OFF"

[node name="Volume Label" type="Label" parent="Settings"]
margin_top = 17.0
margin_right = 156.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "Volume"
align = 1

[node name="Volume" type="HSlider" parent="Settings"]
margin_top = 34.0
margin_right = 156.0
margin_bottom = 66.0
custom_icons/grabber_disabled = ExtResource( 5 )
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 5 )
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource( 4 )

[node name="Back" type="Button" parent="Settings"]
margin_top = 70.0
margin_right = 156.0
margin_bottom = 83.0
focus_mode = 0
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 22 )
custom_styles/focus = SubResource( 23 )
custom_styles/disabled = SubResource( 24 )
custom_styles/normal = SubResource( 25 )
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 0.01
autoplay = true

[connection signal="pressed" from="Main/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Main/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Main/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Settings/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="mouse_exited" from="Settings/Volume" to="Settings/Volume" method="_on_Volume_mouse_exited"]
[connection signal="value_changed" from="Settings/Volume" to="Settings/Volume" method="_on_Volume_value_changed"]
[connection signal="pressed" from="Settings/Back" to="." method="_on_Back_pressed"]
